--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,8 @@ body {
   background-color: #8a7d78;
   }
   
-  .hero {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-   color: #fff;
-    text-align: center;
-      -webkit-transform: translate3d(-50%,-50%,0);
-         -moz-transform: translate3d(-50%,-50%,0);
-          -ms-transform: translate3d(-50%,-50%,0);
-           -o-transform: translate3d(-50%,-50%,0);
-              transform: translate3d(-50%,-50%,0);
+.view 
+{
+  color: aliceblue;
+  height: 100%;
 }
-
-
