--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     .as {
         width: 100%;
         height: 100vh;
-       background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),  url("../img/1.png") top center;
+       background: linear-gradient( rgba(139, 69, 19, 0.5), rgba(0, 0, 0, 0.5) ),  url("../img/Carrousel/refinerìa.png") top center;
         background-size: cover;
         position: relative ;
         margin-top: 0px;
@@ -21,7 +21,7 @@ body {
     .es {
         width: 100%;
         height: 100vh;
-      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7) ), url("../img/elchicoquedomoelviento.jpg") top center;
+      background: linear-gradient( rgba(139, 69, 19, 0.5), rgba(0, 0, 0, 0.7) ), url("../img/Carrousel/elchicoquedomoelviento.jpg") top center;
         background-size: cover;
         position: relative;
         margin-top: 0px;
@@ -30,7 +30,7 @@ body {
     .is {
         width: 100%;
         height: 100vh;
-      background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+      background:linear-gradient( rgba(139, 69, 19, .5), rgba(0, 0, 0, 0.5) ),  url("../img/Carrousel/tecnologìa.jpg") top center;
         background-size: cover;
         position: relative;
         margin-top: 0px;
@@ -43,7 +43,7 @@ body {
 }
 
 .top-nav-collapse {
-  background-color: #8a7d78;
+  background-color: saddlebrown;
   }
   
 .view 
@@ -53,11 +53,11 @@ body {
 }
  
 .uno{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/economia.jpg") top center;
   background-size: cover;
  }
  .dos{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient(  rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
   background-size: cover;
  }
  .tres{
@@ -76,3 +76,13 @@ body {
   background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
   background-size: cover;
  }
+
+
+
+ .fondo {
+background:linear-gradient( rgba(109, 45, 0, 1), rgba(0, 13, 13, 0.5 ));
+}
+
+.color {
+  background-color: rgb(139, 69, 19);  }
+  
