--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-
+html,
+body,
+.view 
+{
+color: aliceblue;
+height: 100%;
+}
 body {
   font-family: "Poppins", sans-serif;
   color: #444444;
@@ -21,7 +27,7 @@ body {
     .es {
         width: 100%;
         height: 100vh;
-      background: linear-gradient( rgba(139, 69, 19, 0.5), rgba(0, 0, 0, 0.7) ), url("../img/Carrousel/elchicoquedomoelviento.jpg") top center;
+      background: linear-gradient( rgba(7, 6, 6, 0.527), rgba(0, 0, 0, 0.7) ), url("../img/Carrousel/elchicoquedomoelviento.jpg") top center;
         background-size: cover;
         position: relative;
         margin-top: 0px;
@@ -30,59 +36,66 @@ body {
     .is {
         width: 100%;
         height: 100vh;
-      background:linear-gradient( rgba(139, 69, 19, .5), rgba(0, 0, 0, 0.5) ),  url("../img/Carrousel/tecnologìa.jpg") top center;
+      background:linear-gradient( rgba(139, 69, 19, .5), rgba(0, 0, 0, 0.5) ),  url("../img/Carrousel/emprendimiento.jpg") top center;
         background-size: cover;
         position: relative;
         margin-top: 0px;
         z-index: 9;
     }
-      
+    
+    .seis {
+      width: 100%;
+      height: 100vh;
+    background:linear-gradient( rgba(139, 69, 19, .5), rgba(0, 0, 0, 0.5) ),  url("../img/Img/seis.jpg") top center;
+      background-size: cover;
+      position: relative;
+      margin-top: 0px;
+      z-index: 9;
+  }
+  
     /*NAVBAR*/
  .navbar {
   background-color: transparent;
 }
 
 .top-nav-collapse {
-  background-color: saddlebrown;
+  background-color: rgb(36, 34, 33);
   }
-  
-.view 
-{
-  color: aliceblue;
-  height: 100%;
-}
+
+
  
 .uno{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/economia.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/uno.jpg") top center;
   background-size: cover;
  }
  .dos{
-  background:linear-gradient(  rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/dos.jpg") top center;
   background-size: cover;
  }
  .tres{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/tres.jpg") top center;
   background-size: cover;
  }
  .cuatro{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/cuatro.jpg") top center;
   background-size: cover;
  }
  .cinco{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/cinco.jpg") top center;
   background-size: cover;
  }
  .seis{
-  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/3.jpg") top center;
+  background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ),  url("../img/Img/seis.jpg") top center;
   background-size: cover;
  }
 
 
 
  .fondo {
-background:linear-gradient( rgba(109, 45, 0, 1), rgba(0, 13, 13, 0.5 ));
+background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0,0, 0.5 ));
 }
 
 .color {
-  background-color: rgb(139, 69, 19);  }
+  background-color: #22201f; 
+  color: white; }
   
