--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+
+
 html,
 body,
 .view 
 {
+box-sizing: border-box;
 color: aliceblue;
 height: 100%;
 }
@@ -9,6 +12,11 @@ body {
   font-family: "Poppins", sans-serif;
   color: #444444;
 }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 
   #carouselExampleSlidesOnly {
     width: 100%;
@@ -99,3 +107,127 @@ background:linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0,0, 0.5 ));
   background-color: #22201f; 
   color: white; }
   
+
+
+
+
+
+
+
+
+
+
+
+
+  
+	#header {
+
+	 
+		align-items: flex-end;
+		justify-content: space-between;
+		background-attachment: scroll,								scroll;
+		background-image:  url("../img/Img/seis.jpg");
+		background-position: top left,							top left;
+		background-repeat: repeat,								no-repeat;
+		background-size: auto,								150%;
+		color: rgba(255, 255, 255);
+		height: 100%;
+		left: 0;
+		padding: 8em 4em;
+		position: fixed;
+		text-align: right;
+		top: 0;
+		width: 30%;
+	}
+
+
+
+
+
+
+
+
+  
+
+
+	#main {
+		margin-left: 35%;
+		max-width: 54em;
+		padding: 8em 4em 4em 4em;
+		width: calc(100% - 35%);
+	}
+
+/* Large */
+
+@media screen and (max-width: 1280px) {
+
+  /* Header */
+
+    #header {
+      padding: 6em 3em 3em 3em;
+      width: 30%;
+    }
+
+                
+
+    #main {
+      margin-left: 30%;
+      max-width: none;
+      padding: 6em 3em 3em 3em;
+      width: calc(100% - 30%);
+    }
+
+}
+
+/* Medium */
+
+@media screen and (max-width: 980px) {
+
+
+
+    #header {
+      background-attachment: scroll;
+      background-position: top left, center center;
+      background-size: auto,		cover;
+      left: auto;
+      padding: 6em 4em;
+      position: relative;
+      text-align: center;
+      top: auto;
+      width: 100%;
+      display: block;
+    }
+
+
+
+  /* Main */
+
+    #main {
+      margin: 0;
+      padding: 6em 4em;
+      width: 100%;
+    }
+
+}
+
+/* Small */
+
+@media screen and (max-width: 736px) {
+
+
+  /* Header */
+
+    #header {
+      padding: 2.25em 1.5em;
+    }
+
+
+
+    #main {
+      padding: 2.25em 1.5em 0.25em 1.5em;
+    }
+
+  
+  
+
+}
